--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="audio">
-     <audio src="sound/Naruto Theme Song Sound Effect.mp3" id="my_audio" loop autoplay  ></audio>
+     <audio src="/Naruto Theme Song Sound Effect.mp3" id="my_audio" loop autoplay  ></audio>
     </div>
        <div class="dicegif"></div>
         <main>
