--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -15,10 +16,12 @@
             <div id="hero">                
             </div>
             <button class="rasingan" id="rasinganbtn" >Rasingan</button> 
+            
             <div id="ninja">
             </div>    
         </main>
         <section id="actions">
+            <i class="fa-solid fa-down-long" id="arow"></i>
             <button id="attack-button">Attack</button>
         </section>
         <script type="module" src="/index.js"></script>
