change html css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>    
         </main>
         <section id="actions">
-            <i class="fa-solid fa-down-long fa-rotate-270"></i>
+            <i class="fa-solid fa-down-long fa-rotate-270" id="arow" ></i>
             <button id="attack-button">Attack</button>
         </section>
         <script type="module" src="/index.js"></script>
